--- a/app/src/main/res/layout/title_layout.xml
+++ b/app/src/main/res/layout/title_layout.xml
@@ -36,7 +36,7 @@
             android:layout_height="match_parent"
             android:paddingTop="15dp"
             android:gravity="center"
-            android:text="开锁登记"
+            android:text="库存盘点"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
